# CADH

./: .gitignore  cadh.cabal  notes.txt  stack.yaml
src/: CCSDS.hs  CCSDSSAGE3.hs  Main.hs  Types.hs
src/CADH/: Channel.hs  DataDefs.hs  Structures.hs  Utils.hs
