name:                cadh
version:             0.1.0.0
synopsis:            Command and Data Handling Library
description:         Please see README.md
homepage:            http://github.com/githubuser/cadh#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Ryan
maintainer:          nsmryan@gmail.com
copyright:           2016 Noah Ryan
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable ccsds
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       cadh
Library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       binary-bits,
                       bytestring,
                       vinyl >= 0.5.1,
                       pipes,
                       pipes-binary,
                       pipes-bytestring,
                       transformers,
                       lens-family,
                       pretty-hex,
                       containers,
                       bimap
  exposed-modules:     CADH.DataDefs
                       CADH.Structures
